[project]
name = "freedium-library"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ZhymabekRoman", email = "robanokssamit@yandex.ru"},
]
dependencies = [
    "litestar>=2.12.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.33.0",
    "pytest-xdist[psutil]>=3.6.1",
]
