[project]
name = "freedium-library"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ZhymabekRoman", email = "robanokssamit@yandex.ru"},
]
dependencies = [
    "litestar>=2.12.1",
    "deprecation>=2.1.0",
    "orjson>=3.10.11",
    "pendulum>=3.0.0",
    "ujson>=5.10.0",
    "httpx[socks]>=0.27.2",
    "asyncclick>=8.1.7.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
api = [
    "slowapi>=0.1.9",
    "fastapi[standard]>=0.115.5",
]
[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.33.0",
    "pytest-xdist[psutil]>=3.6.1",
    "orjson>=3.10.11",
    "pytest-integration>=0.2.3",
    "pre-commit>=4.0.1",
]
