[project]
name = "freedium-library"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ZhymabekRoman", email = "robanokssamit@yandex.ru"},
]
dependencies = [
    "beartype>=0.22.9",
    "deprecation>=2.1.0",
    "orjson>=3.10.18",
    "pendulum>=3.1.0",
    "ujson>=5.10.0",
    "httpx[socks]>=0.28.1",
    "pymongo>=4.13.0",
    "motor>=3.7.1",
    "dependency-injector>=4.47.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "curl-cffi>=0.11.2",
    "bs4>=0.0.2",
    "PyYAML>=6.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
api = [
    "slowapi>=0.1.9",
    "fastapi[standard]>=0.115.12",
]
[tool.pdm]
distribution = false


[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "pytest-httpx>=0.35.0",
    "pytest-xdist[psutil]>=3.7.0",
    "orjson>=3.10.18",
    "pytest-integration>=0.2.3",
    "pre-commit>=4.2.0",
    "freezegun>=1.5.2",
    "pytest-cov>=6.1.1",
    "pyright>=1.1.407",
]

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
